--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "redis": "^3.1.1",
     "redis-json": "^5.0.0",
     "redis-rejson": "^1.0.0",
+    "redis-sentinel": "^0.3.3",
     "xml2js": "^0.4.23",
     "xml2json": "^0.12.0"
   }
